# clip-flow-ai

./: .editorconfig  .geminiignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GEMINI.md  Justfile  LICENSE  README.md  SECURITY.md  cli.py  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  refactor.py  requirements.txt  vite.config.ts
.devcontainer/: devcontainer.json
.github/: labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pre-commit-autoupdate.yml  release.yml
backend/: server.py
config/: settings.yaml
docs/adr/: 0001-record-architecture-decisions.md
electron/: main.ts  preload.ts  tsconfig.json
python_core/: config_manager.py  pipeline.py  worker.py
python_core/audio/: separator.py
python_core/distribution/: base.py  tiktok_browser.py  youtube.py
python_core/editing/: compositor.py  effects.py  ffmpeg_compositor.py  models.py
python_core/ingestion/: downloader.py
python_core/intelligence/: curator.py  models.py  prompts.py
python_core/modes/: story_builder.py
python_core/overlay/: models.py  subtitle.py
python_core/packaging/: generator.py  models.py  prompts.py  thumbnail.py
src/: App.test.tsx  App.tsx  config_manager.py  pipeline.py  setupTests.ts  worker.py
tests/: test_compositor.py  test_config_manager.py  test_curator.py  test_distribution.py  test_downloader.py  test_overlay.py  test_packaging.py  test_pipeline.py  test_retrieval.py  test_server.py  test_server_startup.py  test_story_mode.py  test_v2.py  test_vision.py
(+36 files in other folders)
