[tool.poetry]
name = "clip-flow-ai"
version = "0.0.0"
description = "ClipFlowAI - Fully automated video production pipeline"
authors = ["ClipFlowAI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = ">=2023.11.16"
pyyaml = ">=6.0.1"
pydantic = ">=2.5.2"
loguru = ">=0.7.2"
faster-whisper = "^1.0.0"
torch = ">=2.0.0"
openai = "^1.0.0"
anthropic = "^0.18.0"
instructor = "^1.0.0"
tiktoken = "^0.6.0"
mediapipe = "^0.10.0"
opencv-python = "^4.9.0"
numpy = "^1.26.0"
chromadb = "^0.4.0"
sentence-transformers = "^2.2.0"
pillow = "^12.1.0"
moviepy = "^1.0.3"
scikit-image = "^0.22.0"
google-api-python-client = "^2.100.0"
google-auth-oauthlib = "^1.0.0"
playwright = "^1.40.0"
celery = "^5.3.0"
redis = "^5.0.0"
scenedetect = "^0.6.0"
demucs = "^4.0.0"
torchaudio = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "B"] # Pyflakes, pycodestyle, isort, bugbear
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"
